ajustando button com background-image

--- a/user_management.html
+++ b/user_management.html
@@ -165,131 +165,254 @@
 
         <!--Tabela -> Gerenciamento de Usuarios-->
         <section class="section-table" >
-          <table id="myTable" class="table-teste" width="100%">
+          <table id="myTable" class="table">
             <thead>
               <tr>
                 <th>Nome</th>
                 <th>Usuário</th>
-                <th id="opcoes" colspan="3">Opção</th>
-                <th>Idade</th>
+                <th id="opcoes" colspan="3">Opções</th>
+                <th>vasio</th>
               </tr>
             </thead>
-            <tbody class="tbody">
+            <tbody class="table-active">
               <tr>
                 <td>Taila Santos</td>
                 <td>@laurenorganic</td>
-                <td><button  class="read">Vizualizar</button></td>
-                <td><button  class="update">Editar</button></td>
-                <td><a href="" id="btnDelete" class="delete">
-                      <img src="images/baseline_visibility_white_48dp.png" alt="">
-                    </a>
+                <td><button id="btnVisibility" class="visibility">
+                    <img src="images/visibility_white_24dp.svg" alt="">
+                </button>
+                </td>
+                <td><button id="btnEdit" class="edit">
+                      <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td><button id="btnDelete" class="delete" >
+                      <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
                 </td>
                 <td>vazio</td>
               </tr>
               <tr>
-                <td>Eunice Paixão</td>
-                <td>@eunice23</td>
-                <td><button class="read">Vizualizar</button></td>
-                <td><button class="update">Editar</button></td>
-                <td><button id="btnDelete" class="delete">Deletar</button></td>
-                <td>vazio</td>
-              </tr>
-              <tr>
-                <td>João Vitor Nery</td>
-                <td>@shk</td>
-                <td><button class="read">Vizualizar</button></td>
-                <td><button class="update">Editar</button></td>
-                <td><button class="delete">Deletar</button></td>
-                <td>vazio</td>
-              </tr>               
-              <tr>
-                <td>Palloma Ruysa</td>
-                <td>@pallomaruy</td>
-                <td><button class="read">Vizualizar</button></td>
-                <td><button class="update">Editar</button></td>
-                <td><button class="delete">Deletar</button></td>
-                <td>vazio</td>
-              </tr>               
-              <tr>
-                <td>Wesley Eugênio</td>
-                <td>@wellgenio</td>
-                <td><button class="read">Vizualizar</button></td>
-                <td><button class="update">Editar</button></td>
-                <td><button class="delete">Deletar</button></td>
-                <td>vazio</td>
-              </tr>               
-              <tr>
-                <td>Lorena Santos</td>
-                <td>@lowrena</td>
-                <td><button class="read">Vizualizar</button></td>
-                <td><button class="update">Editar</button></td>
-                <td><button class="delete">Deletar</button></td>
-                <td>vazio</td>
-              </tr>               
-              <tr>
-                <td>Elis Soeiro</td>
-                <td>@elis.oeiro</td>
-                <td><button class="read">Vizualizar</button></td>
-                <td><button class="update">Editar</button></td>
-                <td><button class="delete">Deletar</button></td>
+                <td>Taila Santos</td>
+                <td>@laurenorganic</td>
+                <td><button id="btnVisibility" class="visibility">
+                    <img src="images/visibility_white_24dp.svg" alt="">
+                </button>
+                </td>
+                <td><button id="btnEdit" class="edit">
+                      <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td><button id="btnDelete" class="delete" >
+                      <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
                 <td>vazio</td>
               </tr>
               <tr>
                 <td>Taila Santos</td>
                 <td>@laurenorganic</td>
-                <td><button class="read">Vizualizar</button></td>
-                <td><button class="update">Editar</button></td>
-                <td><button class="delete">Deletar</button></td>
+                <td><button id="btnVisibility" class="visibility">
+                    <img src="images/visibility_white_24dp.svg" alt="">
+                </button>
+                </td>
+                <td><button id="btnEdit" class="edit">
+                      <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td><button id="btnDelete" class="delete" >
+                      <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
                 <td>vazio</td>
               </tr>               
               <tr>
                 <td>Taila Santos</td>
                 <td>@laurenorganic</td>
-                <td><button class="read">Vizualizar</button></td>
-                <td><button class="update">Editar</button></td>
-                <td><button class="delete">Deletar</button></td>
+                <td><button id="btnVisibility" class="visibility">
+                    <img src="images/visibility_white_24dp.svg" alt="">
+                </button>
+                </td>
+                <td><button id="btnEdit" class="edit">
+                      <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td><button id="btnDelete" class="delete" >
+                      <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td>vazio</td>
+              </tr>              
+              <tr>
+                <td>Taila Santos</td>
+                <td>@laurenorganic</td>
+                <td><button id="btnVisibility" class="visibility">
+                    <img src="images/visibility_white_24dp.svg" alt="">
+                </button>
+                </td>
+                <td><button id="btnEdit" class="edit">
+                      <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td><button id="btnDelete" class="delete" >
+                      <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td>vazio</td>
+              </tr>              
+              <tr>
+                <td>Taila Santos</td>
+                <td>@laurenorganic</td>
+                <td><button id="btnVisibility" class="visibility">
+                    <img src="images/visibility_white_24dp.svg" alt="">
+                </button>
+                </td>
+                <td><button id="btnEdit" class="edit">
+                      <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td><button id="btnDelete" class="delete" >
+                      <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
                 <td>vazio</td>
               </tr>               
               <tr>
                 <td>Taila Santos</td>
                 <td>@laurenorganic</td>
-                <td><button class="read">Vizualizar</button></td>
-                <td><button class="update">Editar</button></td>
-                <td><button class="delete">Deletar</button></td>
+                <td><button id="btnVisibility" class="visibility">
+                    <img src="images/visibility_white_24dp.svg" alt="">
+                </button>
+                </td>
+                <td><button id="btnEdit" class="edit">
+                      <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td><button id="btnDelete" class="delete" >
+                      <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
                 <td>vazio</td>
-              </tr>               
+              </tr>
               <tr>
                 <td>Taila Santos</td>
                 <td>@laurenorganic</td>
-                <td><button class="read">Vizualizar</button></td>
-                <td><button class="update">Editar</button></td>
-                <td><button class="delete">Deletar</button></td>
+                <td><button id="btnVisibility" class="visibility">
+                    <img src="images/visibility_white_24dp.svg" alt="">
+                </button>
+                </td>
+                <td><button id="btnEdit" class="edit">
+                      <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td><button id="btnDelete" class="delete" >
+                      <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
                 <td>vazio</td>
-              </tr>               
+              </tr>              
               <tr>
                 <td>Taila Santos</td>
                 <td>@laurenorganic</td>
-                <td><button class="read">Vizualizar</button></td>
-                <td><button class="update">Editar</button></td>
-                <td><button class="delete">Deletar</button></td>
+                <td><button id="btnVisibility" class="visibility">
+                    <img src="images/visibility_white_24dp.svg" alt="">
+                </button>
+                </td>
+                <td><button id="btnEdit" class="edit">
+                      <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td><button id="btnDelete" class="delete" >
+                      <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
                 <td>vazio</td>
-              </tr>               
+              </tr>              
               <tr>
                 <td>Taila Santos</td>
                 <td>@laurenorganic</td>
-                <td><button class="read">Vizualizar</button></td>
-                <td><button class="update">Editar</button></td>
-                <td><button class="delete">Deletar</button></td>
+                <td><button id="btnVisibility" class="visibility">
+                    <img src="images/visibility_white_24dp.svg" alt="">
+                </button>
+                </td>
+                <td><button id="btnEdit" class="edit">
+                      <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td><button id="btnDelete" class="delete" >
+                      <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
                 <td>vazio</td>
-              </tr>               
+              </tr>              
               <tr>
                 <td>Taila Santos</td>
                 <td>@laurenorganic</td>
-                <td><button class="read">Vizualizar</button></td>
-                <td><button class="update">Editar</button></td>
-                <td><button class="delete">Deletar</button></td>
+                <td><button id="btnVisibility" class="visibility">
+                    <img src="images/visibility_white_24dp.svg" alt="">
+                </button>
+                </td>
+                <td><button id="btnEdit" class="edit">
+                      <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td><button id="btnDelete" class="delete" >
+                      <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
                 <td>vazio</td>
-              </tr>                                             
+              </tr>
+              <tr>
+                <td>Taila Santos</td>
+                <td>@laurenorganic</td>
+                <td><button id="btnVisibility" class="visibility">
+                    <img src="images/visibility_white_24dp.svg" alt="">
+                </button>
+                </td>
+                <td><button id="btnEdit" class="edit">
+                      <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td><button id="btnDelete" class="delete" >
+                      <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td>vazio</td>
+              </tr>        
+              <tr>
+                <td>Taila Santos</td>
+                <td>@laurenorganic</td>
+                <td><button id="btnVisibility" class="visibility">
+                    <img src="images/visibility_white_24dp.svg" alt="">
+                </button>
+                </td>
+                <td><button id="btnEdit" class="edit">
+                      <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td><button id="btnDelete" class="delete" >
+                      <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td>vazio</td>
+              </tr>            
+              <tr>
+                <td>Taila Santos</td>
+                <td>@laurenorganic</td>
+                <td><button id="btnVisibility" class="visibility">
+                    <img src="images/visibility_white_24dp.svg" alt="">
+                </button>
+                </td>
+                <td><button id="btnEdit" class="edit">
+                      <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td><button id="btnDelete" class="delete" >
+                      <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+                <td>vazio</td>
+              </tr>                                       
             </tbody>
           </table>       
         </section>
