Configuração do bug de login

--- a/user_management.html
+++ b/user_management.html
@@ -261,7 +261,7 @@
                 <td>vazio</td>
               </tr>              
               <tr>
-                <td>Taila Santos</td>
+                <td>Lorena Santos</td>
                 <td>@laurenorganic</td>
                 <td><button id="btnVisibility" class="visibility">
                     <img src="images/visibility_white_24dp.svg" alt="">
@@ -278,7 +278,7 @@
                 <td>vazio</td>
               </tr>               
               <tr>
-                <td>Taila Santos</td>
+                <td>Eunice Suzart</td>
                 <td>@laurenorganic</td>
                 <td><button id="btnVisibility" class="visibility">
                     <img src="images/visibility_white_24dp.svg" alt="">
