alteração das msg de erro

--- a/user_registration.html
+++ b/user_registration.html
@@ -159,21 +159,21 @@
                   <div class="user-email">
                     <label for="">Nome
                       <input id="nome" name="" required="" type="text" placeholder=""/>
-                      <p id="msgErro2" style="display: none;">O Campo precisa ser preenchido</p>
+                      <p id="msgErro" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                     <label for="">Sobrenome
                       <input id="sobrenome" name="" required="" type="text" placeholder=""/>
-                      <p id="msgErro3" style="display: none;">O Campo precisa ser preenchido</p>
+                      <p id="msgErro2" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                   </div>
                   <div class="user-email">
                     <label for="">Usuário
                       <input id="nomedeusuario" name="" required="" type="text" placeholder=""/>
-                      <p id="msgErro2" style="display: none;">O Campo precisa ser preenchido</p>
+                      <p id="msgErro3" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                     <label for="">Email
                       <input id="email" name="" required="" type="text" placeholder=""/>
-                      <p id="msgErro3" style="display: none;">O Campo precisa ser preenchido</p>
+                      <p id="msgErro4" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                   </div>
                   <div class="office-access">   
