Alterado nome do arquivo js no script e o nome consertado 'id' dos 'input'

--- a/product_registration.html
+++ b/product_registration.html
@@ -164,13 +164,13 @@
                         <div class="tipe">
                             <label for="">Tipo
                                 <input id="tipe" type="text" placeholder=""/>
-                                <p id="msgErro" style="display: none;">O Campo precisa ser preenchido</p>
+                                <p id="msgErro2" style="display: none;">O Campo precisa ser preenchido</p>
                             </label>
                         </div>
                         <div class="value">
                             <label for="">Valor
                                 <input id="value" type="text" placeholder=""/>
-                                <p id="msgErro" style="display: none;">O Campo precisa ser preenchido</p>
+                                <p id="msgErro3" style="display: none;">O Campo precisa ser preenchido</p>
                             </label>
                         </div>
                     </div>
@@ -185,6 +185,6 @@
     </div>
   </div> 
 </div>
-<script type="module" src="script/user_registration.js"></script>
+<script type="module" src="script/product_registration.js"></script>
 </body>
 </html>
