adicionando um preloader de teste

--- a/home.html
+++ b/home.html
@@ -17,6 +17,18 @@
   <script src="script/database/database-connection.js"></script>
 </head>
 <body>
+  <!-- início do preloader -->
+  <div id="preloader">
+    <div class="inner">
+       <!-- HTML DA ANIMAÇÃO MUITO LOUCA DO SEU PRELOADER! -->
+       <div class="bolas">
+          <div></div>
+          <div></div>
+          <div></div>                    
+       </div>
+    </div>
+</div>
+<!-- fim do preloader --> 
   <div class="content">
     <div id="home">
     <div class="centro">
@@ -204,6 +216,7 @@
     </div>
   </div> 
 </div>
+  <script src="script/preloader.js"></script>
   <script type="module" src="script/home.js"></script>
 </body>
 </html>
