atualização no tempo de loading

--- a/home.html
+++ b/home.html
@@ -17,18 +17,9 @@
   <script src="script/database/database-connection.js"></script>
 </head>
 <body>
-  <!-- início do preloader -->
-  <div id="preloader">
-    <div class="inner">
-       <!-- HTML DA ANIMAÇÃO MUITO LOUCA DO SEU PRELOADER! -->
-       <div class="bolas">
-          <div></div>
-          <div></div>
-          <div></div>                    
-       </div>
-    </div>
+  <div class="loader">
+    <img src="images/833.gif" alt="Loading..." />
 </div>
-<!-- fim do preloader --> 
   <div class="content">
     <div id="home">
     <div class="centro">
