--- a/testeTable.html
+++ b/testeTable.html
@@ -9,37 +9,360 @@
     <script src="//cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="testeTable.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="icon" href="./images/y.png"   sizes="any"  >
+    <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-database.js"></script>
+    <script src="script/database/database-connection.js"></script>
 
-    <title>table</title>
+    <title>SysUnity</title>
 </head>
+
 <body>
-    <table id="myTable" class="table" width="50%">
-        <thead class="table-dark">
+    
+    <table id="myTable" class="display">
+        <thead>
             <tr>
-                <th>Nome</th>
+                <th>Name</th>
                 <th>Usuário</th>
-                <th id="opcoes" colspan="3">Opção</th>
-                <th>Idade</th>
+                <th>Opções</th>
+                
             </tr>
         </thead>
         <tbody>
             <tr>
-              <td>Tiger Nixon</td>
-              <td>System Architect</td>
-              <td>Edinburgh</td>
-              <td>61</td>
-              <td>2011/04/25</td>
-              <td>iureb</td>
-
+                <td>Palloma Ruysa</td>
+                <td>@llomaMoon</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete" >
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
             </tr>
             <tr>
-              <td>Garrett Winters</td>
-              <td>Accountant</td>
-              <td>Tokyo</td>
-              <td>63</td>
-              <td>2011/07/25</td>
-              <td>iureb</td>
-              </tr>
+                <td>Ambrósia Andrade</td>
+                <td>@andradeAmber</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete" >
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Taila Santos</td>
+                <td>@laurenorganic</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete" >
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Tiger</td>
+                <td>Nixon</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete">
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Garrett</td>
+                <td>Winters</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete">
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Ashton</td>
+                <td>Cox</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete">
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Cedric</td>
+                <td>Kelly</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete">
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Airi</td>
+                <td>Satou</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete">
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Brielle</td>
+                <td>Williamson</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete">
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Herrod</td>
+                <td>Chandler</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete">
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Rhona</td>
+                <td>Davidson</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete">
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Palloma Ruysa</td>
+                <td>@llomaMoon</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete" >
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Ambrósia Andrade</td>
+                <td>@andradeAmber</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete" >
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Taila Santos</td>
+                <td>@laurenorganic</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete" >
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Tiger</td>
+                <td>Nixon</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete">
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Garrett</td>
+                <td>Winters</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete">
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Ashton</td>
+                <td>Cox</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete">
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Cedric</td>
+                <td>Kelly</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete">
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Airi</td>
+                <td>Satou</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete">
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Brielle</td>
+                <td>Williamson</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete">
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Herrod</td>
+                <td>Chandler</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete">
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <td>Rhona</td>
+                <td>Davidson</td>
+                <td>
+                    <button id="btnVisibility" class="visibility">
+                        <img src="images/visibility_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnEdit" class="edit">
+                        <img src="images/create_white_24dp.svg" alt="">
+                    </button>
+                    <button id="btnDelete" class="delete">
+                        <img src="images/delete_white_24dp.svg" alt="">
+                    </button>
+                </td>
+            </tr>
         </tbody>
     </table>
 
