--- a/user_management.html
+++ b/user_management.html
@@ -178,9 +178,45 @@
                     <td>Palloma Ruysa</td>
                     <td>@llomaMoon</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                    <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
+                        <div class="modal" id="MyModal">
+                          <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <h5 class="modal-title">Visualizar Usuário</h5>
+                                <button type="button" class="delete" data-bs-dismiss="modal"></button>
+                              </div>
+                              <div class="modal-body">
+                                <form>
+                                  <div class="user-email">
+                                    <label for="">Nome
+                                      <input id="nome" type="text" placeholder=""/>
+                                    </label>
+                                    <label for="">Sobrenome
+                                      <input id="sobrenome" type="text" placeholder=""/>
+                                    </label>
+                                  </div>
+                                  <div class="user-email">
+                                    <label for="">Usuário
+                                      <input id="nomedeusuario" type="text" placeholder=""/>
+                                    </label>
+                                    <label for="">Email
+                                      <input id="email" type="text" placeholder=""/>
+                                    </label>
+                                  </div>
+                                  <div class="office-access">   
+                                    <label for="">Cargo
+                                      <select id="office"></select>
+                                    </label>
+                                    <label for="">Nivel de acesso
+                                      <select id="access"></select>
+                                    </label> 
+                                  </div>
+                                </form>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -193,9 +229,7 @@
                     <td>Ambrósia Andrade</td>
                     <td>@andradeAmber</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -208,9 +242,7 @@
                     <td>Taila Santos</td>
                     <td>@laurenorganic</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -223,9 +255,7 @@
                     <td>Tiger</td>
                     <td>Nixon</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -238,9 +268,7 @@
                     <td>Garrett</td>
                     <td>Winters</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -253,9 +281,7 @@
                     <td>Ashton</td>
                     <td>Cox</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -268,9 +294,7 @@
                     <td>Cedric</td>
                     <td>Kelly</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -283,9 +307,7 @@
                     <td>Airi</td>
                     <td>Satou</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -298,9 +320,7 @@
                     <td>Brielle</td>
                     <td>Williamson</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -313,9 +333,7 @@
                     <td>Herrod</td>
                     <td>Chandler</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -328,9 +346,7 @@
                     <td>Rhona</td>
                     <td>Davidson</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -343,9 +359,7 @@
                     <td>Palloma Ruysa</td>
                     <td>@llomaMoon</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -358,9 +372,7 @@
                     <td>Ambrósia Andrade</td>
                     <td>@andradeAmber</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -373,9 +385,7 @@
                     <td>Taila Santos</td>
                     <td>@laurenorganic</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -388,9 +398,7 @@
                     <td>Tiger</td>
                     <td>Nixon</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -403,9 +411,7 @@
                     <td>Garrett</td>
                     <td>Winters</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -418,9 +424,7 @@
                     <td>Ashton</td>
                     <td>Cox</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -433,9 +437,7 @@
                     <td>Cedric</td>
                     <td>Kelly</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -448,9 +450,7 @@
                     <td>Airi</td>
                     <td>Satou</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -463,9 +463,7 @@
                     <td>Brielle</td>
                     <td>Williamson</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -478,9 +476,7 @@
                     <td>Herrod</td>
                     <td>Chandler</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
@@ -493,9 +489,7 @@
                     <td>Rhona</td>
                     <td>Davidson</td>
                     <td>
-                        <button id="btnVisibility" class="visibility">
-                            <img src="images/visibility_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button id="btnEdit" class="edit">
                             <img src="images/create_white_24dp.svg" alt="">
                         </button>
