adicionado 'disable' nos inputs

--- a/user_management.html
+++ b/user_management.html
@@ -190,26 +190,26 @@
                                 <form>
                                   <div class="user-email">
                                     <label for="">Nome
-                                      <input id="nome" type="text" placeholder=""/>
+                                      <input id="nome" type="text" placeholder="" disabled=""/>
                                     </label>
                                     <label for="">Sobrenome
-                                      <input id="sobrenome" type="text" placeholder=""/>
+                                      <input id="sobrenome" type="text" placeholder="" disabled=""/>
                                     </label>
                                   </div>
                                   <div class="user-email">
                                     <label for="">Usuário
-                                      <input id="nomedeusuario" type="text" placeholder=""/>
+                                      <input id="nomedeusuario" type="text" placeholder="" disabled=""/>
                                     </label>
                                     <label for="">Email
-                                      <input id="email" type="text" placeholder=""/>
+                                      <input id="email" type="text" placeholder="" disabled=""/>
                                     </label>
                                   </div>
                                   <div class="office-access">   
                                     <label for="">Cargo
-                                      <select id="office"></select>
+                                      <select id="office" disabled=""></select>
                                     </label>
                                     <label for="">Nivel de acesso
-                                      <select id="access"></select>
+                                      <select id="access" disabled=""></select>
                                     </label> 
                                   </div>
                                 </form>
