--- a/user_management.html
+++ b/user_management.html
@@ -272,9 +272,25 @@
                             </div>
                         </div>
                       </div>
-                        <button id="btnDelete" class="delete" >
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+
+                      <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
+                      <div class="modal" id="MyModalDeletar">
+                        <div class="modal-dialog modal-dialog-centered">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title3">Deletar Usuário</h5>
+                                <button type="button" class="delete" data-bs-dismiss="modal"></button>
+                            </div>
+                            <div class="modal-body">
+                              <form>
+                                <h3>Tem certeza que deseja deletar o usuário?</h3>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Não</button>
+                                <button type="button" class="btn btn-primary">Sim</button>
+                              </form>
+                            </div>
+                            </div>
+                        </div>
+                      </div>
                     </td>
                 </tr>
                 <tr>
@@ -283,9 +299,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete" >
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -294,9 +308,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete" >
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -305,9 +317,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -316,9 +326,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -327,9 +335,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -338,9 +344,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -349,9 +353,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -360,9 +362,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -371,9 +371,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -382,9 +380,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -393,9 +389,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete" >
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -404,9 +398,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete" >
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -415,9 +407,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete" >
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -426,9 +416,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -437,9 +425,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -448,9 +434,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -459,9 +443,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -470,9 +452,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -481,9 +461,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -492,9 +470,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
                 <tr>
@@ -503,9 +479,7 @@
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
                         <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
-                        <button id="btnDelete" class="delete">
-                            <img src="images/delete_white_24dp.svg" alt="">
-                        </button>
+                        <button type="button" class="delete" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
                     </td>
                 </tr>
             </tbody>
