testando função de usuarios

--- a/user_management.html
+++ b/user_management.html
@@ -226,7 +226,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Ambrósia Andrade</td>
+                    <td id="name">Ambrósia Andrade</td>
                     <td>@andradeAmber</td>
                     <td>
                         <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
