teste com os botoes na tabela

--- a/user_management.html
+++ b/user_management.html
@@ -174,6 +174,11 @@
             </thead>
             <tbody id="tablebody">
             </tbody>
+            <!-- <td>
+              <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
+              <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
+              <button id="btnDelete" class="delete" type="button" data-bs-toggle="modal" data-bs-target="#MyModalDeletar"></button>
+            </td> -->
         </table>       
         </section>
       </section>
